[package]
name = "gamecrawler"
version = "0.1.0"
edition = "2021"
description = "Crawl BoardGameGeek for a designer's full ludography and render it as a PDF overview"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
futures = "0.3"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
regex = "1"

[lib]
name = "gamecrawler"
path = "src/lib.rs"

[[bin]]
name = "gamecrawler"
path = "src/main.rs"

[[bin]]
name = "popular"
path = "src/bin/popular.rs"

[[bin]]
name = "top"
path = "src/bin/top.rs"

[[bin]]
name = "bga_index"
path = "src/bin/bga_index.rs"

[[bin]]
name = "bga_playable"
path = "src/bin/bga_playable.rs"
